# mscomplex-2d

./: CMakeLists.txt  config.h.in  main.cpp
dmsc/: bitonic_sort.cpp  discreteMorseAlgorithm.h  discreteMorseDS.h  grid.h  grid_datamanager.cpp  grid_datamanager.h  grid_dataset.cpp  grid_dataset.h  grid_mscomplex.cpp  grid_mscomplex.h  grid_mscomplex_ensure.h  main.cpp  prefix_scan.cpp
dmsc/include/: grid_mscomplex.h  grid_viewer.h  rectangle_complex.h
dmsc/ocl/: assigngradient.cl  bfs_watershed.cl  collate_critpts.cl  common_funcs.cl  scan_kernel.cl
dmsc/src/: grid_datamanager.cpp  grid_viewer.cpp  grid_viewer_mainwindow.cpp
viewer/: grid_viewer.cpp  grid_viewer.h  grid_viewer_mainwindow.cpp  grid_viewer_mainwindow.h  grid_viewer_mainwindow.ui
viewer/shaders/: cell_shader_geom.glsl  cyl_1mfold_geom.glsl  cyl_2mfold_geom.glsl  cylinder_geom.glsl  grad_geom.glsl  grad_vert.glsl
